# winry-themes

./: CMakeLists.txt  README.md
lookandfeel/: metadata.desktop  metadata.json
lookandfeel/contents/: defaults
lookandfeel/contents/runcommand/: RunCommand.qmlc
lookandfeel/contents/splash/: Splash.qml
lookandfeel/contents/splash/images/: busywidget.svgz  plasma.svgz
